--- a/app/views/layouts/layout.phtml
+++ b/app/views/layouts/layout.phtml
@@ -7,7 +7,44 @@
 	<script src="https://cdn.tailwindcss.com"></script>
 
 </head>
-<body>
-	<?php echo $this->content(); ?>
+
+<body class="bg-white min-h-screen flex flex-col ">
+
+
+	<header class="bg-orange-500 p-4 flex items-center justify-center w-full">
+				<div class="flex-shrink-0 w-auto">
+					<img src="images/checklist.svg" alt="todolist_icon" class="w-15 h-12">
+				</div>
+				<div class="flex-shrink-0">
+					<a href="<?php echo WEB_ROOT?>" class="text-white text-2xl font-bold ml-4">ToDoList</a> <!-- Añadido un margen a la izquierda para separar los elementos -->
+				</div>
+	</header>
+
+	<div>
+		<a href="<?php echo WEB_ROOT . "/getinsertform"?>" class="text-black">Insertar</a>
+
+	</div>
+
+	<main class="flex">
+		<div class="flex mx-auto">
+			<div class="mt-4"><?= $this->content() ?></div>
+		</div>
+	</main>
+
+    <footer class="bg-gray-800 text-white p-4 text-center">
+        <p class="text-white mt-2">App created by</p>
+        <div class="flex items-center justify-center mt-2">
+            <a href="https://www.linkedin.com/in/carles-ruiz-montejo-tecnico-de-campo-especialista" class="flex items-center text-white text-lg mx-5">
+                <img src="images/linkedin.png" alt="Enlace 1 Icon" class="w-6 h-6 mr-2">
+                Carles Ruiz
+            </a>
+            <a href="https://www.linkedin.com/in/agonzalezar" class="flex items-center text-white text-lg mx-5">
+                <img src="images/linkedin.png" alt="Enlace 2 Icon" class="w-6 h-6 mr-2">
+                Antonio González
+            </a>
+        </div>
+    </footer>
+
+
 </body>
 </html>
