header icon added and not used web/images deleted

--- a/app/views/layouts/layout.phtml
+++ b/app/views/layouts/layout.phtml
@@ -12,13 +12,12 @@
 
 <body class="min-h-screen flex flex-col ">
 
-	<header class="bg-orange-500 p-4 flex items-center justify-center w-full">
-				<div class="flex-shrink-0 w-auto">
-					<img src="images/checklist.svg" alt="todolist_icon" class="w-15 h-12">
-				</div>
-				<div class="flex-shrink-0">
-					<a href="<?php echo WEB_ROOT?>" class="text-white text-2xl font-bold ml-4">ToDoList</a> <!-- Añadido un margen a la izquierda para separar los elementos -->
-				</div>
+	<header class="bg-orange-500 p-2 flex items-center justify-center w-full">
+		<div class="flex-shrink-0">
+			<a href="<?php echo WEB_ROOT?>">
+				<img src="images/todolisticon.png" alt="todolist_icon" class="w-15 h-13">
+			</a>
+		</div>
 	</header>
 
 	<!--<div>
