main tag style correction

--- a/app/views/layouts/layout.phtml
+++ b/app/views/layouts/layout.phtml
@@ -24,7 +24,7 @@
 		<a href="<?php echo WEB_ROOT . "/getinsertform"?>" class="text-black">Insertar</a>
 	</div>-->
 
-	<main class="flex-grow">
+	<main class="flex-grow flex flex-col h-full">
     	<?= $this->content() ?>		
   	</main>
 
