--- a/app/views/scripts/application/getViewInsertForm.phtml
+++ b/app/views/scripts/application/getViewInsertForm.phtml
@@ -8,34 +8,34 @@
                             
             <!-- Title -->
             <div class="mb-4 px-2">
-                <label for="title" class="block text-orange-600 font-medium">Task name:</label>
-                <input type="text" id="title" name="title" required class="mt-1 p-2 w-full border rounded-md focus:outline-none focus:border-orange-500">
+                <label for="task_name_id" class="block text-orange-600 font-medium">Task name:</label>
+                <input type="text" id="task_name_id" name="task_name" required class="mt-1 p-2 w-full border rounded-md focus:outline-none focus:border-orange-500">
             </div>
 
             <!-- Text -->
             <div class="mb-4 px-2">
-                <label for="text" class="block text-orange-600 font-medium">Task details:</label>
-                <textarea id="text" name="text" rows="2" required class="mt-1 p-2 w-full border rounded-md focus:outline-none focus:border-orange-500"></textarea>
+                <label for="task_details_id" class="block text-orange-600 font-medium">Task details:</label>
+                <textarea id="task_details_id" name="task_details" rows="2" required class="mt-1 p-2 w-full border rounded-md focus:outline-none focus:border-orange-500"></textarea>
             </div>
 
             <div class="flex mb-4">
 
                 <!-- Created By -->
                 <div class="w-1/3 px-2">
-                    <label for="createdBy" class="block text-orange-600 font-medium">Created by:</label>
-                    <input type="text" id="createdBy" name="createdBy" required class="mt-1 p-2 w-full border rounded-md focus:outline-none focus:border-orange-500 ml-0">
+                    <label for="task_creation_id" class="block text-orange-600 font-medium">Created by:</label>
+                    <input type="text" id="task_creation_id" name="task_created_by" required class="mt-1 p-2 w-full border rounded-md focus:outline-none focus:border-orange-500 ml-0">
                 </div>
 
                 <!-- Task assignation -->
                 <div class="w-1/3 px-2">
-                    <label for="user" class="block text-orange-600 font-medium">Task assigned to:</label>
-                    <input type="text" id="user" name="user" required class="mt-1 p-2 w-full border rounded-md focus:outline-none focus:border-orange-500">
+                    <label for="task_assignation_id" class="block text-orange-600 font-medium">Task assigned to:</label>
+                    <input type="text" id="task_assignation_id" name="task_assigned_to" required class="mt-1 p-2 w-full border rounded-md focus:outline-none focus:border-orange-500">
                 </div>
 
                 <!-- Deadline -->
                 <div class="w-1/3 px-2">
-                    <label for="finishDate" class="block text-orange-600 font-medium">Deadline:</label>
-                    <input type="date" id="finishDate" name="finishDate" required class="mt-1 p-2 w-full border rounded-md focus:outline-none focus:border-orange-500">
+                    <label for="task_deadline_id" class="block text-orange-600 font-medium">Deadline:</label>
+                    <input type="date" id="task_deadline_id" name="task_deadline" required class="mt-1 p-2 w-full border rounded-md focus:outline-none focus:border-orange-500">
                 </div>
 
                 <!-- Status -->
