--- a/app/views/scripts/application/getViewInsertForm.phtml
+++ b/app/views/scripts/application/getViewInsertForm.phtml
@@ -1,7 +1,7 @@
 <div class="flex my-auto">
     <div class="w-3/5 mx-auto p-4">
         <h2 class="text-2xl font-semibold text-center text-orange-400">CREATE A NEW TASK</h2>
-        <form action="createTask" method="get" class="text-orange-400">
+        <form action="createTask" method="get" class="text-orange-400" autocomplete="off">
 
             <!-- ID: -->
             <!-- Auto-assigned data in createTaskAction method -->
