--- a/app/views/scripts/application/getViewInsertForm.phtml
+++ b/app/views/scripts/application/getViewInsertForm.phtml
@@ -1,3 +1,6 @@
+
+<!-- This script is responsible for generating the creation form for a new task -->
+
 <div class="flex my-auto">
     <div class="w-3/5 mx-auto p-4">
         <h2 class="text-2xl font-semibold text-center text-orange-400">CREATE A NEW TASK</h2>
