--- a/app/views/scripts/application/createTask.phtml
+++ b/app/views/scripts/application/createTask.phtml
@@ -1,5 +1,14 @@
-<?php 
 
-    echo $this->message;
+<!-- This script is responsible for generating the response view after creating a new task -->
 
-?>
+<div class="flex my-auto">
+    <div class="w-1/3 mx-auto p-8 bg-orange-400">
+        <div class="text-center">
+            <p class="mb-14 text-xl text-white"><?php echo $this->message; ?></p>
+            <div class="space-x-12">
+                <a href="<?php echo WEB_ROOT?>" class="bg-blue-500 text-white px-4 py-2 rounded">See all tasks</a>
+                <a href="<?php echo WEB_ROOT . "/getinsertform"?>" class="bg-green-500 text-white px-4 py-2 rounded">Create new task</a>
+            </div>
+        </div>
+    </div>
+</div>
