--- a/app/views/scripts/application/createTask.phtml
+++ b/app/views/scripts/application/createTask.phtml
@@ -2,13 +2,21 @@
 <!-- This script is responsible for generating the response view after creating a new task -->
 
 <div class="flex my-auto">
-    <div class="w-1/3 mx-auto p-8 bg-orange-400">
+    <div class="w-1/3 mx-auto p-8 bg-neutral-200 rounded-md">
         <div class="text-center">
-            <p class="mb-14 text-xl text-white"><?php echo $this->message; ?></p>
+            <p class="mb-10 text-xl <?php echo $this->txtColor;?>"><?php echo $this->message; ?></p>
             <div class="space-x-12">
-                <a href="<?php echo WEB_ROOT?>" class="bg-blue-500 text-white px-4 py-2 rounded">See all tasks</a>
-                <a href="<?php echo WEB_ROOT . "/getinsertform"?>" class="bg-green-500 text-white px-4 py-2 rounded">Create new task</a>
+                <button class="bg-white text-black px-4 py-2 rounded-md hover:bg-lime-500">
+                    <a href="<?php echo WEB_ROOT?>">See all tasks</a>
+                </button>
+                <button class="bg-white text-black px-4 py-2 rounded-md hover:bg-lime-500">
+                <a href="<?php echo WEB_ROOT . "/getinsertform"?>">Create new task</a>
+                </button>
+                
             </div>
         </div>
     </div>
 </div>
+
+
+<!--<button type="submit" class="bg-orange-600 text-white px-4 py-2 rounded-md hover:bg-lime-500">Save task</button>-->
