modified paths to resources (images) in layout.phtml file

--- a/app/views/layouts/layout.phtml
+++ b/app/views/layouts/layout.phtml
@@ -17,7 +17,7 @@
 	<header class="bg-orange-500 p-2 flex items-center justify-center w-full">
 		<div class="flex-shrink-0">
 			<a href="<?php echo WEB_ROOT?>">
-				<img src="images/todolisticon.png" alt="todolist_icon" class="w-15 h-13">
+				<img src="http://<?php echo $_SERVER['HTTP_HOST']."/".WEB_ROOT?>/images/todolisticon.png" alt="todolist_icon" class="w-15 h-13">
 			</a>
 		</div>
 	</header>
@@ -34,11 +34,11 @@
         <p class="text-white mt-2">App created by</p>
         <div class="flex items-center justify-center mt-2">
             <a href="https://www.linkedin.com/in/carles-ruiz-montejo-tecnico-de-campo-especialista" class="flex items-center text-white text-lg mx-5">
-                <img src="images/linkedin.png" alt="Enlace 1 Icon" class="w-6 h-6 mr-2">
+                <img src="http://<?php echo $_SERVER['HTTP_HOST']."/".WEB_ROOT?>/images/linkedin.png" alt="Enlace 1 Icon" class="w-6 h-6 mr-2">
                 Carles Ruiz
             </a>
             <a href="https://www.linkedin.com/in/agonzalezar" class="flex items-center text-white text-lg mx-5">
-                <img src="images/linkedin.png" alt="Enlace 2 Icon" class="w-6 h-6 mr-2">
+                <img src="http://<?php echo $_SERVER['HTTP_HOST']."/".WEB_ROOT?>/images/linkedin.png" alt="Enlace 2 Icon" class="w-6 h-6 mr-2">
                 Antonio González
             </a>
         </div>
