Added link to create new task into Create a new task button

--- a/app/views/scripts/application/getAlltasks.phtml
+++ b/app/views/scripts/application/getAlltasks.phtml
@@ -5,7 +5,7 @@ if (isset($allTasks)) : ?>
 
 <div class="w-2/3 mx-auto">
 <div class="w-full text-center mt-4">
-    <a href="#" class="bg-red-500 text-white p-2 w-2/5">Create a new task</a>
+    <a href="<?php echo WEB_ROOT . "/getinsertform"?>" class="bg-red-500 text-white p-2 w-2/5">Create a new task</a>
 </div>
 <br>
 
