--- a/app/views/scripts/application/getViewPreDelete.phtml
+++ b/app/views/scripts/application/getViewPreDelete.phtml
@@ -11,7 +11,7 @@
                     <?php if ($this->task_id > 0): ?>
                         <a href="<?php echo WEB_ROOT . "/deleteTask/" . $this->task_id;?>">Yes, delete it!!</a>
                     <?php else: ?>
-                        <a href="<?php echo WEB_ROOT . "/getviewinsertform" ?>">Create new task</a>
+                        <a href="<?php echo WEB_ROOT . "/getinsertform" ?>">Create new task</a>
                     <?php endif; ?>
                 </button>
                 <button class="bg-white text-black px-4 py-2 rounded-md hover:bg-lime-500">
