--- a/app/views/scripts/application/getAlltasks.phtml
+++ b/app/views/scripts/application/getAlltasks.phtml
@@ -4,8 +4,8 @@ $allTasks = $this->allTasks;
 if (isset($allTasks)) : ?>
 
 <div class="w-2/3 mx-auto">
-<div class="w-full text-center mt-4">
-    <a href="<?php echo WEB_ROOT . "/getinsertform"?>" class="bg-red-500 text-white p-2 w-2/5">Create a new task</a>
+<div class="w-full text-center mt-2">
+    <h2 class="text-2xl font-semibold text-center text-orange-400">TASK LIST</h2>
 </div>
 <br>
 
