Search is working but only if case sensitive

--- a/app/views/layouts/layout.phtml
+++ b/app/views/layouts/layout.phtml
@@ -26,7 +26,7 @@
 			<!-- Create task -->
     		<a href="<?php echo WEB_ROOT . "/getinsertform"?>" class="mx-2 bg-lime-300 hover:bg-lime-400 py-2 px-4 rounded"><button>CREATE TASK</button></a>
     		<!-- Search TASK -->
-			<a href="<?php echo WEB_ROOT . "/getinsertform"?>" class="mx-2 bg-lime-300 hover:bg-lime-400 py-2 px-4 rounded"><button>SEARCH TASK</button></a>
+			<a href="<?php echo WEB_ROOT . "/getsearchform"?>" class="mx-2 bg-lime-300 hover:bg-lime-400 py-2 px-4 rounded"><button>SEARCH TASK</button></a>
 		</div>
 	</header>
 
