--- a/app/views/scripts/application/getSearchResults.phtml
+++ b/app/views/scripts/application/getSearchResults.phtml
@@ -4,13 +4,13 @@
 
     if (isset($results)) : ?>
     
-    <div class="w-2/3 mx-auto">
-    <div class="w-full text-center mt-2">
-        <h2 class="text-2xl font-semibold text-center text-orange-400">SEARCH RESULTS LIST</h2>
-    </div>
-    <br>
-    
-    <div class="min-w-full">
+        <div class="w-2/3 mx-auto">
+        <div class="w-full text-center mt-2">
+            <h2 class="text-2xl font-semibold text-center text-orange-400">SEARCH RESULTS LIST</h2>
+        </div>
+        <br>
+        
+        <div class="min-w-full">
     
    
 <?php foreach ($results as $task) :
@@ -69,7 +69,6 @@
                 <input class="w-1/5 ml-40 text-center" value="<?php echo($task['task_status']); ?>"></input>
                 <button class="text-green-500 ml-20 text-lg scale-125"><i class="fas fa-edit"></i></button>
                 <button class="text-red-500 ml-20 text-lg scale-125"><a href="<?php echo WEB_ROOT . "/getViewPreDelete/" . $task['task_id']; ?>"><i class="fas fa-trash"></i></a></button>
-
             </div>
         </div>
     </div>
@@ -83,7 +82,22 @@
         <?php endforeach; ?>
     
     <?php else : ?>
-        <p>No information to show</p>
+        <!--<p>No information to show</p>-->
+        <div class="flex my-auto">
+            <div class="w-1/3 mx-auto p-8 bg-neutral-200 rounded-md">
+                <div class="text-center">
+                    <p class="mb-10 text-xl <?php echo $this->txtColor;?>"><?php echo $this->message; ?></p>
+                    <div class="space-x-12">
+                        <button class="bg-white text-black px-4 py-2 rounded-md hover:bg-lime-500">
+                            <a href="<?php echo WEB_ROOT?>">See all tasks</a>
+                        </button>
+                        <button class="bg-white text-black px-4 py-2 rounded-md hover:bg-lime-500">
+                        <a href="<?php echo WEB_ROOT . "/getsearchform"?>">New search</a>
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
     <?php endif; ?>
     </div>
 
