--- a/app/views/scripts/application/getViewSearchForm.phtml
+++ b/app/views/scripts/application/getViewSearchForm.phtml
@@ -3,9 +3,8 @@
 
 <div class="flex my-auto">
     <div class="w-3/5 mx-auto p-4">
-        <h2 class="text-2xl font-semibold text-center text-orange-400">SEARCH TASK</h2>
-        <form action="getsearchresults" method="post" class="text-orange-400" autocomplete="off">
-                            
+        <h2 class="text-2xl mb-8 font-semibold text-center text-orange-400">SEARCH TASK</h2>
+        <form action="getsearchresults" method="post" class="text-orange-400" autocomplete="off">     
             <div class="flex">
                 <div class="w-3/4">
                     <!-- Task name -->
