--- a/app/views/scripts/application/getAlltasks.phtml
+++ b/app/views/scripts/application/getAlltasks.phtml
@@ -70,7 +70,7 @@ if (isset($allTasks)) : ?>
                 <button class="text-blue-500 ml-2 text-lg scale-100" onclick="toggleModal('task-<?php echo $task['task_id']; ?>')"><i class="fas fa-eye"></i></button>
                 <label class="w-2/5 text-center"><strong>Deadline:</strong> <?php echo($task['task_deadline']); ?></label>
                 <input class="w-1/5 ml-40 text-center" value="<?php echo($task['task_status']); ?>"></input>
-                <button class="text-green-500 ml-20 text-lg scale-125"><i class="fas fa-edit"></i></button>
+                <button id="task_id" class="text-green-500 ml-20 text-lg scale-125"><a href="<?php echo WEB_ROOT . "/editTask/" . $task['task_id']; ?>"><i class="fas fa-edit"></i></button>
                 <button class="text-red-500 ml-20 text-lg scale-125"><a href="<?php echo WEB_ROOT . "/getViewPreDelete/" . $task['task_id']; ?>"><i class="fas fa-trash"></i></a></button>
 
             </div>
@@ -86,7 +86,7 @@ if (isset($allTasks)) : ?>
     <?php endforeach; ?>
 
 <?php else : ?>
-    <p>No hay datos a mostrar.</p>
+    <p>No hay tareas en la lista.</p>
 <?php endif; ?>
 </div>
 
