Basic Edit Task

--- a/app/views/layouts/layout.phtml
+++ b/app/views/layouts/layout.phtml
@@ -7,7 +7,7 @@
 	<title>TO DO LIST</title>
 	<link rel="stylesheet" href="http://<?php echo $_SERVER['HTTP_HOST']."/".WEB_ROOT?>/stylesheets/styles.css">
 	<script src="https://cdn.tailwindcss.com"></script>
-	<script src="javascripts/functions.js"></script>
+	<script src="http://<?php echo $_SERVER['HTTP_HOST']."/".WEB_ROOT?>/javascripts/functions.js"></script>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
 
 </head>
