--- a/app/views/scripts/application/getAlltasks.phtml
+++ b/app/views/scripts/application/getAlltasks.phtml
@@ -8,6 +8,7 @@ if (isset($allTasks)) : ?>
 
     <?php foreach ($allTasks as $task) :
         $shortenedText = isset($task['task_details']) ? substr($task['task_details'], 0, 20) : '';
+        $color = isset($task['color']) ? $task['color'] : 'black'; // Obtén el color de la tarea o usa 'black' por defecto
     ?>
 
     <div class="border border-black rounded-md p-2 mb-2">
@@ -23,11 +24,11 @@ if (isset($allTasks)) : ?>
 
             <div class="w-3/5 ml-2">
                 <h1 class="block w-full text-center font-bold text-orange-400 text-2x1"><?php echo strtoupper($task['task_name']); ?></h1>
-                <br><label class="w-2/5 text-center text-<?php $color = "black"; echo $color; ?>"><strong>Deadline:</strong> <?php echo($task['task_deadline']); ?></label>
+                <br><label class="w-2/5 text-center "><strong>Deadline:</strong> <?php echo($task['task_deadline']); ?></label>
             </div>
 
             <div class="w-1/5 ml-2">
-                <div class="ml-2 bg-orange-300 rounded-md p-1 text-center">
+                <div class="ml-2 bg-<?php echo $color; ?> rounded-md p-1 text-center">
                     <label>Assigned to</label><br>
                     <label class="block w-full font-bold text-orange-700"><?php echo " " . ($task['task_assigned_to']); ?></label>
                     
