--- a/app/views/scripts/application/getAlltasks.phtml
+++ b/app/views/scripts/application/getAlltasks.phtml
@@ -8,7 +8,7 @@ if (isset($allTasks)) : ?>
 
     <?php foreach ($allTasks as $task) :
         $shortenedText = isset($task['task_details']) ? substr($task['task_details'], 0, 20) : '';
-        $color = isset($task['color']) ? $task['color'] : 'black'; // Obtén el color de la tarea o usa 'black' por defecto
+        $color = isset($task['color']) ? $task['color'] : 'black'; 
     ?>
 
     <div class="border border-black rounded-md p-2 mb-2">
