--- a/app/views/scripts/application/showEditTask.phtml
+++ b/app/views/scripts/application/showEditTask.phtml
@@ -4,6 +4,9 @@
 <div class="flex my-auto">
     <div class="w-3/5 mx-auto p-4">
         <h2 class="text-2xl font-semibold text-center text-orange-400">EDIT TASK</h2>
+        <div>
+        <input type="text" id="msg" name="msg" value="<?php echo $this->message; ?>" class="mt-1 p-2 w-full border rounded-md focus:outline-none focus:border-orange-500">
+        </div>
         <form action="editTask" method="post" class="text-orange-400" autocomplete="off">
             <input hidden type="text" id="task_id" name="task_id" value="<?php echo $this->task_id; ?>" required class="mt-1 p-2 w-full border rounded-md focus:outline-none focus:border-orange-500">          
 
