--- a/web/stylesheets/styles.css
+++ b/web/stylesheets/styles.css
@@ -56,7 +56,8 @@ main {
 }
 
 ::placeholder {
-    font-size: 0.9rem;
+    font-size: 0.7rem;
     font-family: Playpen_light;
+    font-style: italic;
 }
 
