--- a/app/views/scripts/application/getAlltasksList.phtml
+++ b/app/views/scripts/application/getAlltasksList.phtml
@@ -5,7 +5,9 @@ if (isset($allTasks)) : ?>
 
 <div class="w-2/3 mx-auto">
 <div class="w-full text-center mt-4">
-
+    <div>
+        <?php include('paginationView.phtml'); ?>
+    </div>
     <?php foreach ($allTasks as $task) :
         $shortenedText = isset($task['task_details']) ? substr($task['task_details'], 0, 20) : '';
         $color = isset($task['color']) ? $task['color'] : 'black'; 
@@ -27,12 +29,13 @@ if (isset($allTasks)) : ?>
                 <br><label class="w-2/5 text-center "><strong>Deadline:</strong> <?php echo($task['task_deadline']); ?></label>
             </div>
 
-            <div class="w-1/5 ml-2">
-                <div class="ml-2 bg-<?php echo $color; ?> rounded-md p-1 text-center">
+            <div class="w-1/5 ml-2 bg-<?php echo $color; ?> rounded-md p-1 text-center">
+                <div class="ml-2 ">
                     <label>Assigned to</label><br>
                     <label class="block w-full font-bold text-orange-700"><?php echo " " . ($task['task_assigned_to']); ?></label>
-                    
+                    <input class="block w-full text-center bg-<?php echo $color; ?>" value="<?php echo($task['task_status']); ?>" readonly></input>
                 </div>
+                
             </div>
         </div>
         <div class="flex mb-2 ml-2">
@@ -40,7 +43,7 @@ if (isset($allTasks)) : ?>
             <div class="flex ">
                 <button class="text-blue-500 ml-[1%] text-lg scale-100" onclick="toggleModal('task-<?php echo $task['task_id']; ?>')"><i class="fas fa-eye"></i></button>
                 
-                <input class="w-1/5 ml-[20%] text-center" value="<?php echo($task['task_status']); ?>" readonly></input>
+                
                 <button id="task_id" class="text-green-500 ml-[50%] text-lg scale-125"><a href="<?php echo WEB_ROOT . "/showEditTask/" . $task['task_id']; ?>"><i class="fas fa-edit"></i></button>
                 <button class="text-red-500 ml-[75%] text-lg scale-125"><a href="<?php echo WEB_ROOT . "/getViewPreDelete/" . $task['task_id']; ?>"><i class="fas fa-trash"></i></a></button>
 
@@ -55,6 +58,8 @@ if (isset($allTasks)) : ?>
 <!-- Fin del modal -->
 
     <?php endforeach; ?>
+
+    
 
 <?php else : ?>
     <p>No hay tareas en la lista.</p>
