--- a/app/views/scripts/application/getViewPreDelete.phtml
+++ b/app/views/scripts/application/getViewPreDelete.phtml
@@ -15,7 +15,7 @@
                     <?php endif; ?>
                 </button>
                 <button class="bg-white text-black px-4 py-2 rounded-md hover:bg-lime-500">
-                <a href="<?php echo WEB_ROOT . "/getAllTasks"?>"><?php echo $this->buttonText; ?></a>
+                <a href="<?php echo WEB_ROOT . "/getAllTasksList"?>"><?php echo $this->buttonText; ?></a>
                 </button>
 
             </div>
