--- a/app/views/scripts/application/getAlltasksList.phtml
+++ b/app/views/scripts/application/getAlltasksList.phtml
@@ -40,10 +40,8 @@ if (isset($allTasks)) : ?>
         </div>
         <div class="flex mb-2 ml-2">
             <label class="border border-gray-300 rounded-md p-2 block w-[24%] "><?php echo $shortenedText . "..."; ?></label>
-            <div class="flex ">
+            <div class="flex ml-10 ">
                 <button class="text-blue-500 ml-[1%] text-lg scale-100" onclick="toggleModal('task-<?php echo $task['task_id']; ?>')"><i class="fas fa-eye"></i></button>
-                
-                
                 <button id="task_id" class="text-green-500 ml-[50%] text-lg scale-125"><a href="<?php echo WEB_ROOT . "/showEditTask/" . $task['task_id']; ?>"><i class="fas fa-edit"></i></button>
                 <button class="text-red-500 ml-[75%] text-lg scale-125"><a href="<?php echo WEB_ROOT . "/getViewPreDelete/" . $task['task_id']; ?>"><i class="fas fa-trash"></i></a></button>
 
