--- a/app/views/scripts/application/showEditTask.phtml
+++ b/app/views/scripts/application/showEditTask.phtml
@@ -47,13 +47,13 @@
                 </div>
 
                 <div class="w-1/3 px-2">
-                    <label for="task_status" class="block text-orange-600 font-medium">Status:</label>
-                    <select name="task_status " required value="<?php echo $this->task_status; ?>"  class="mt-1 p-2 w-full border rounded-md focus:outline-none focus:border-orange-500">
+                    <label class="block text-orange-600 font-medium">Status:</label>
+                    <select name="task_status" required class="mt-1 p-2 w-full border rounded-md focus:outline-none focus:border-orange-500">
                         <option><?php echo $this->task_status; ?></option>
-                        <option>Pending</option>
-                        <option>In Progress</option>
-                        <option>Completed</option>
-                    </select>    
+                        <option value="Pending">Pending</option>
+                        <option value="In Progress">In Progress</option>
+                        <option value="Completed">Completed</option>
+                    </select>
                 </div>
 
             </div>
