--- a/app/views/scripts/application/getSearchResults.phtml
+++ b/app/views/scripts/application/getSearchResults.phtml
@@ -77,7 +77,7 @@
     <div id="task-<?php echo $task['task_id']; ?>" class="modal hidden fixed inset-0 overflow-y-auto z-50">
         <?php include('modalShowOneTask.php'); ?>
     </div>
-    <!-- Fin del modal -->
+    <!-- Modal end -->
     
         <?php endforeach; ?>
     
